Adding link to Mendeley data.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -297,10 +297,8 @@ Precipitation time series were provided by MeteoSwiss. The NCEP/NCAR, NCEP/DOE, 
 \section*{data availability}
 All calculations were performed with the open-source AtmoSwing software v2.1.1 \citep{Horton2019c}. The resulting files were processed using AtmoSwing R-toolbox v1.2.0 \citep{Horton2018d}.
 
-The resulting analog dates for every combination of station, reanalysis, and analog method have been published. These archives also contain different files: the parameter files used in AtmoSwing for the calibration, the resulting calibrated parameters, and the files listing all assessed parameter sets. These files are available for ERA5 (<...TO BE UPDATED...>) and the other reanalyses \citep[see references in][]{Horton2018b}.
+The resulting analog dates for every combination of station, reanalysis, and analog method have been published. These archives also contain different files: the parameter files used in AtmoSwing for the calibration, the resulting calibrated parameters, and the files listing all assessed parameter sets. These files are available for ERA5 \citep{Horton2021} and the other reanalyses \citep[see references in][]{Horton2018b}.
 
-
-%TODO: publish data
 
 
 \section*{conflict of interest}
