--- a/references.bib
+++ b/references.bib
@@ -657,7 +657,6 @@
 }
 @article{Teweles1954,
 	author = {Teweles, S and Wobus, H B},
-	file = {:D$\backslash$:/{\_}Storage/Mendeley/Teweles, Wobus - 1954.pdf:pdf},
 	journal = {Bulletin of the American Meteorological Society},
 	pages = {455--463},
 	title = {{Verification of prognostic charts}},
@@ -1039,4 +1038,11 @@
     title = {{The ERA5 global reanalysis}},
     volume = {146},
     year = {2020}
+}
+@misc{Horton2021,
+	author = {Horton, Pascal},
+	doi = {10.17632/9cb9gns63w.1},
+	note = {{Mendeley Data, v1}},
+	title = {{Analog dates for ERA5 at 301 precipitation stations in Switzerland (1981-2010)}},
+	year = {2021}
 }
